--- a/apps/argo/deployment.yaml
+++ b/apps/argo/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: nginx:latest
+        image: nginx:alpine
         resources:
           limits:
             memory: "128Mi"
